--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4408471237671638"
+            crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="%PUBLIC_URL%/logoBlack.png" />
@@ -9,12 +11,12 @@
     <base href="/">
     <meta
       name="description"
-      content="Recursive Education"
+      content="Learn React NodeJs ExpressJs Advance Javascript practice within doing project."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;0,600;1,300;1,400&family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,500&family=Raleway:wght@100;200;300;400;500;600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">
-    <title>Recursive Education HTML || CSS || JAVASCRIPT || REACT || NODE JS || PROJECT PRACTICE</title>
+    <title>Recursive Education</title>
   </head>
   <body>
     <div id="root"></div>
